worked on this even though i already did it why didnt i commit it why why why